# uv-template

./: .copier-answers.yml.jinja  .gitignore  Makefile  README.md  copier.yml  pyproject.toml  pyproject.toml.jinja
devtools/: lint.py
scripts/: clean.py  lint.py  test.py
template/: .dockerignore  .env.example.jinja  Dockerfile.api.jinja  Dockerfile.jinja  Dockerfile.worker.jinja  LICENSE.jinja  Makefile  docker-compose.yml.jinja  pyproject.toml.jinja
template/devtools/: lint.py
template/scripts/: clean.py  lint.py  test_runner.py  upgrade.py
template/src/{{project_name|replace('-', '_')}}/: logging.py
template/src/{{project_name|replace('-', '_')}}/api/: __init__.py  __main__.py  exceptions.py
template/src/{{project_name|replace('-', '_')}}/api/dependencies/: worker.py.jinja
template/src/{{project_name|replace('-', '_')}}/api/middlewares/: base.py
template/src/{{project_name|replace('-', '_')}}/api/routers/: __init__.py
template/src/{{project_name|replace('-', '_')}}/api/schemas/: base.py
template/src/{{project_name|replace('-', '_')}}/core/services/: base.py
template/src/{{project_name|replace('-', '_')}}/core/utils/: validation.py
template/src/{{project_name|replace('-', '_')}}/worker/: __init__.py  __main__.py  settings.py
template/src/{{project_name|replace('-', '_')}}/worker/handlers/: startup.py
template/src/{{project_name}}/: __init__.py  __init__.py.jinja  _version.py.jinja  config.py.jinja
template/src/{{project_name}}/api/: __init__.py  __init__.py.jinja  __main__.py  __main__.py.jinja  exceptions.py
template/src/{{project_name}}/api/dependencies/: common.py  common.py.jinja  worker.py.jinja
template/src/{{project_name}}/api/middlewares/: request_id.py  timing.py
template/src/{{project_name}}/api/routers/: base.py  health.py  health.py.jinja
template/src/{{project_name}}/core/: enums.py  exceptions.py
template/src/{{project_name}}/worker/: __init__.py  __init__.py.jinja  __main__.py  __main__.py.jinja  settings.py  settings.py.jinja  utils.py
{{project_name}}/: .pre-commit-config.yaml  pyproject.toml.jinja
(+9 files in other folders)
